# react-native-webrtc-nitro

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  README.md  Webrtc.podspec  nitro.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: android-build.yml  build-3rdparty.yml  ios-build.yml  release.yml  testcpp.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/webrtc/: HybridCamera.kt  HybridMicrophone.kt  HybridPermissions.kt  HybridWebrtcView.kt
cpp/: FramePipe.cpp  FramePipe.hpp  MockCamera.hpp  MockMicrophone.hpp  rtcpnackrequester.cpp  rtcpnackrequester.hpp
cpp/FFmpeg/: AudioFifo.cpp  AudioFifo.hpp  Common.cpp  Common.hpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  FFmpeg.hpp  Frame.cpp  Frame.hpp  Muxer.cpp  Muxer.hpp  Packet.cpp  Packet.hpp  Resampler.cpp  Resampler.hpp  Scaler.cpp  Scaler.hpp
cpp/Hybrid/: HybridMediaDevices.cpp  HybridMediaDevices.hpp  HybridMediaStream.cpp  HybridMediaStream.hpp  HybridMediaStreamTrack.cpp  HybridMediaStreamTrack.hpp  HybridRTCPeerConnection.cpp  HybridRTCPeerConnection.hpp  HybridRTCRtpReceiver.hpp  HybridRTCRtpSender.hpp  HybridRTCRtpTransceiver.cpp  HybridRTCRtpTransceiver.hpp
cpp/__tests__/: CMakeLists.txt  main.cpp  testFramePipe.cpp
cpp/__tests__/FFmpeg/: testAudioFifo.cpp  testCommon.cpp  testDecoder.cpp  testEncoder.cpp  testFrame.cpp  testMuxer.cpp  testResampler.cpp  testScaler.cpp
example/: Gemfile  package.json
example/android/: gradle.properties
example/ios/WebrtcExample.xcodeproj/: project.pbxproj
example/src/: Answer.tsx  App.tsx  Camera.tsx  Home.tsx  Offer.tsx  SelfVideo.tsx  Tabs.tsx
ios/: FramePipeWrapper.h  FramePipeWrapper.mm  HybridCamera.swift  HybridMicrophone.swift  HybridPermissions.swift  HybridWebrtcView.swift
src/: index.ts
src/specs/: MediaDevices.nitro.ts  MediaStream.nitro.ts  MediaStreamTrack.nitro.ts  Permissions.nitro.ts  RTCPeerConnection.nitro.ts  RTCRtpReceiver.nitro.ts  RTCRtpSender.nitro.ts  RTCRtpTransceiver.nitro.ts
src/views/: WebrtcView.nitro.ts  WebrtcView.tsx
